hphp/test/slow/class-ptr/get-class-from-type-bad-cls-vec.php.expectf
Fatal error: You cannot create a new instance of this type as it is not a class in %s/class-ptr/get-class-from-type-bad-cls-vec.php on line 5
